# Simple-Game-Engine

./: CMakeLists.txt  Doxyfile  game.exe - Shortcut.lnk
Release/: myEngine.lib
src/game/: Camera_FirstPerson.cpp  Camera_FirstPerson.h  SoundToggle.cpp  SoundToggle.h  SpinComponent.cpp  SpinComponent.h  TestScene.cpp  main.cpp
src/myEngine/: Application.cpp  Application.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Core.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Exception.cpp  Exception.h  Input.cpp  Input.h  Lights.cpp  Lights.h  Material.h  Renderer.cpp  Renderer.h  Resource.h  Resources.cpp  Resources.h  ShaderProgram.cpp  ShaderProgram.h  Sound.cpp  Sound.h  SoundComponent.cpp  SoundComponent.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  myEngine.h
src/myEngine/shaders/: simple.frag  simple.vert  simpleTex.vert
src/resources/shaders/: simpleCol.vert  simpleTex.txt
src/resources/shaders/vertFragFiles/: lightingShader.frag  lightingShader.vert
